# wintermute

./: .gitignore  last_dream_time.txt  pyproject.toml
backend/: Dockerfile  config.py  faker_dataset.py  generate_embeddings_dataset.py  main.py  package.json  requirements.txt  test-pcapi.py  upsert_dataset_pinecone.py  verify-api.py
backend/api/core/: evaluation.py  vector_operations.py
backend/api/core/memory/: cache.py  memory.py  summary.py
backend/api/core/scheduling/: dream_sequence.py
backend/api/core/vector/: vector_operations.py
backend/api/utils/: config.py  context_window.py  dream_sequence.py  llm_service.py  pinecone_service.py  prompt_templates.py  task_queue.py  vector_operations.py
backend/core/: evaluation.py
backend/core/memory/: memory.py  models.py
backend/core/prompts/: prompt_templates.py
backend/tests/: add_memory2.py  endtoend_testing.py  test_api.py  test_integration.py  test_interaction_memory.py  test_memory_system.py  test_prompt_generation.py  test_search_mem.py
backend/utils/: context_window.py  dream_sequence.py  llm_service.py  memory_add.py  pinecone_service.py  task_queue.py  vector_operations.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  app.css  index.css  index.js
tests/: test_context_window.py  test_dream_sequence.py  test_main.py  test_memory_system.py
